Primary functionalities implemented.

--- a/src/main/resources/public/account.html
+++ b/src/main/resources/public/account.html
@@ -17,15 +17,15 @@
 					<a class="navbar-brand" href="#"><small>the </small>Bank <span class="glyphicon glyphicon-th"></span></a>
 				</div>
 				<ul class="nav navbar-nav">
-					<li><a href="/app/dashboard">Home</a></li>
-                    <li class="active"><a href="/app/banking">Banking</a></li>
-                    <li><a href="/app/loan">Loans</a></li>
+					<li><a href="dashboard.html">Home</a></li>
+                    <li class="active"><a href="banking.html">Banking</a></li>
+                    <li><a href="loans.html">Loans</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span><span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="/app/profile"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
+                            <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
                             <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         </ul>
                     </li>
