--- a/src/main/resources/public/applyloan.html
+++ b/src/main/resources/public/applyloan.html
@@ -3,13 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Loan Application</title>
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-		/>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/applyloan.js"></script>
+        <link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<nav class="navbar navbar-default navbar-fixed-top">
@@ -19,15 +18,15 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li><a href="dashboard.html">Home</a></li>
-                    <li class="active"><a href="#">Banking</a></li>
+                    <li><a href="banking.html">Banking</a></li>
                     <li><a href="loans.html">Loans</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Clyde Joshua Delgado <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
-                            <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                            <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> Profile</a></li>
+                            <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -39,14 +38,15 @@
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
                     <h2>Loan Application</h2>
-                    <form class="form-horizontal" id="transfer-funds-form">
+                    <form class="form-horizontal" id="loan_application_form">
                         <div class="form-group">
-                            <label class="control-label col-sm-2" for="loan-type">Type</label>
+                            <label class="control-label col-sm-2" for="type">Type</label>
                             <div class="col-sm-10">
-                                <select class="form-control" id="loan-type">
-                                    <option value="1">Mortgage</option>
-                                    <option value="2">Personal loan</option>
-                                    <option value="3">Student loan</option>
+                                <select class="form-control" id="type" required>
+                                    <option value="HOME">Mortgage</option>
+                                    <option value="AUTO">Auto loan</option>
+                                    <option value="PERSONAL">Personal loan</option>
+                                    <option value="STUDENT">Student loan</option>
                                 </select>
                             </div>
                         </div>
@@ -54,25 +54,25 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="loan-term">Term (Years)</label>
                             <div class="col-sm-10">
-                                <select class="form-control" id="loan-term">
-                                    <option value="1">30-year fixed</option>
-                                    <option value="2">15-year fixed</option>
-                                    <option value="3">5-year ARM</option>
+                                <select class="form-control" id="term" required>
+                                    <option value="30">30-year fixed</option>
+                                    <option value="15">15-year fixed</option>
+                                    <option value="5">5-year ARM</option>
                                 </select>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="control-label col-sm-2" for="loan-term">Interest rate</label>
+                            <label class="control-label col-sm-2" for="interest">Interest rate</label>
                             <div class="col-sm-10">
-                                <input type="decimal" class="form-control" id="interest" placeholder="ex. 6.5">
+                                <input type="number" class="form-control" id="interest" min="3.5" max="36.0" placeholder="ex. 6.5" required>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="amount">Amount:</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" id="amount" placeholder="ex. 20000">
+                                <input type="number" class="form-control" id="amount" min="1000" placeholder="ex. 20000" required>
                             </div>
                         </div>
 
@@ -82,6 +82,7 @@
                             </div>
                         </div>
                     </form>
+                    <div id="alert"></div>
                 </div>
             </div>
         </div>
