--- a/src/main/resources/public/banking.html
+++ b/src/main/resources/public/banking.html
@@ -26,7 +26,7 @@
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
-                            <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                            <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -51,9 +51,9 @@
                     <div class="container-fluid">
                         <h3>Actions</h3>
                         <ul class="list-group">
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-transfer"></span> Transfer funds</a></li>
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-usd"></span> Apply for loan</a></li>
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-credit-card"></span> Pay for loan</a></li>
+                            <li class="list-group-item"><a href="transferfunds.html"><span class="glyphicon glyphicon-transfer"></span> Transfer funds</a></li>
+                            <li class="list-group-item"><a href="applyloan.html"><span class="glyphicon glyphicon-usd"></span> Apply for loan</a></li>
+                            <li class="list-group-item"><a href="payloan.html"><span class="glyphicon glyphicon-credit-card"></span> Pay for loan</a></li>
                         </ul>
                     </div>
                 </div>
