--- a/src/main/resources/public/dashboard.html
+++ b/src/main/resources/public/dashboard.html
@@ -18,14 +18,14 @@
 				</div>
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
-                    <li><a href="app/banking">Banking</a></li>
-                    <li><a href="app/loans">Loans</a></li>
+                    <li><a href="banking.html">Banking</a></li>
+                    <li><a href="loans.html">Loans</a></li>
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="app/profile"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
+                            <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
                             <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         </ul>
                     </li>
@@ -85,12 +85,12 @@
 					</div>
 
 					<div class="col-sm-6">
-                        <!-- <h3></h3> -->
+                        <h3>Actions</h3>
                         <ul class="list-group">
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-transfer"></span> Transfer funds</a></li>
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-usd"></span> Apply for loan</a></li>
-                            <li class="list-group-item"><a href="#"><span class="glyphicon glyphicon-credit-card"></span> Pay for loan</a></li>
-                          </ul>
+                            <li class="list-group-item"><a href="transferfunds.html"><span class="glyphicon glyphicon-transfer"></span> Transfer funds</a></li>
+                            <li class="list-group-item"><a href="applyloan.html"><span class="glyphicon glyphicon-usd"></span> Apply for loan</a></li>
+                            <li class="list-group-item"><a href="payloan.html"><span class="glyphicon glyphicon-credit-card"></span> Pay for loan</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
