--- a/src/main/resources/public/payloan.html
+++ b/src/main/resources/public/payloan.html
@@ -6,7 +6,8 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<script src="js/payloan.js"></script>
+		<script src="js/util.js"></script>
+        <script src="js/payloan.js"></script>
         <link rel="stylesheet" href="css/style.css" />
 
 	</head>
@@ -23,10 +24,10 @@
 				</ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Clyde Joshua Delgado <span class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span> <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
-                            <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                            <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -41,22 +42,14 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="loan">Loan</label>
                             <div class="col-sm-10">
-                                <select class="form-control" id="loan">
-                                    <option value="1">Loan 1</option>
-                                    <option value="2">Loan 2</option>
-                                    <option value="3">Loan 3</option>
-                                </select>
+                                <select class="form-control" id="loan"></select>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="account">Account</label>
                             <div class="col-sm-10">
-                                <select class="form-control" id="account">
-                                    <option value="1">Loan 1</option>
-                                    <option value="2">Loan 2</option>
-                                    <option value="3">Loan 3</option>
-                                </select>
+                                <select class="form-control" id="account"></select>
                             </div>
                         </div>
 
@@ -73,6 +66,7 @@
                             </div>
                         </div>
                     </form>
+                    <div class="container-fluid" id="alert"></div>
                 </div>
             </div>
         </div>
