--- a/src/main/resources/public/profile.html
+++ b/src/main/resources/public/profile.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
-    <link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-		/>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/util.js"></script>
+    <script src="js/profile.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -24,10 +23,10 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Clyde Joshua Delgado <span class="caret"></span></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span id="user_name"></span> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span> <span id="user_fullname">Profile</span></a></li>
-                        <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </li>
             </ul>
@@ -43,8 +42,8 @@
                 <hr>
                 <h4>About me</h4>
                 <ul class="list-group">
-                    <li class="list-group-item"><strong>Legal Name</strong> <span id="full_name">Clyde Joshua Delgado</span></li>
-                    <li class="list-group-item"><strong>Address</strong> <span id="address">123 Jackson Ave, San Jose, CA 95146</span></li>
+                    <li class="list-group-item"><strong>Legal Name</strong> <span id="full_name"></span></li>
+                    <li class="list-group-item"><strong>Address</strong> <span id="address"></span></li>
                     <li class style="padding: 0.5em; list-style-type: none;">
                         <a href="#" data-toggle="modal" data-target="#change_address_modal">change address</a>
                     </li>
@@ -52,8 +51,8 @@
                 <hr>
                 <h4>Contact info</h4>
                 <ul class="list-group">
-                    <li class="list-group-item"><strong>Email</strong> <span id="email">delgadoclydejoshua@gmail.com</span></li>
-                    <li class="list-group-item"><strong>Phone</strong> <span id="phone">(123)456-7890</span></li>
+                    <li class="list-group-item"><strong>Email</strong> <span id="email"></span></li>
+                    <li class="list-group-item"><strong>Phone</strong> <span id="phone"></span></li>
                     <li class style="padding: 0.5em; list-style-type: none;">
                         <a href="#" data-toggle="modal" data-target="#change_contact_info_modal">change contact info</a>
                     </li>
@@ -77,7 +76,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="address_input">Address</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="address_input" placeholder="Enter address">
+                                <input type="text" class="form-control" id="address_input" placeholder="Enter address" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -86,6 +85,7 @@
                             </div>
                         </div>
                     </form>
+                    <div id="address_alert"></div>
                 </div>
             </div>
         </div>
@@ -104,13 +104,13 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="email_input">Email:</label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control" id="email_input" placeholder="Enter email">
+                                <input type="email" class="form-control" id="email_input" placeholder="ex. johndoe@example.com" required>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="phone_input">Phone:</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="phone_input" placeholder="Enter password">
+                                <input type="text" class="form-control" id="phone_input" placeholder="ex. 3214560987" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -119,6 +119,7 @@
                             </div>
                         </div>
                     </form>
+                    <div id="contact_alert"></div>
                 </div>
             </div>
     
