--- a/src/main/resources/public/applyloan.html
+++ b/src/main/resources/public/applyloan.html
@@ -65,14 +65,14 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="interest">Interest rate</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" id="interest" min="3.5" max="36.0" placeholder="ex. 6.5" required>
+                                <input type="number" step="0.01"  class="form-control" id="interest" min="3.5" max="36.0" placeholder="ex. 6.5" required>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="amount">Amount:</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" id="amount" min="1000" placeholder="ex. 20000" required>
+                                <input type="number" step="0.01"  class="form-control" id="amount" min="1000" placeholder="ex. 20000" required>
                             </div>
                         </div>
 
