--- a/src/main/resources/public/loan.html
+++ b/src/main/resources/public/loan.html
@@ -92,7 +92,7 @@
                                             <label class="control-label col-sm-2" for="min">Minimum
                                                 amount</label>
                                             <div class="col-sm-10">
-                                                <input type="number" class="form-control" id="min"
+                                                <input type="number" step="0.01"  class="form-control" id="min"
                                                         placeholder="ex. 100">
                                             </div>
                                         </div>
@@ -101,7 +101,7 @@
                                             <label class="control-label col-sm-2" for="max">Maximum
                                                 amount</label>
                                             <div class="col-sm-10">
-                                                <input type="number" class="form-control" id="max"
+                                                <input type="number" step="0.01"  class="form-control" id="max"
                                                         placeholder="ex. 1000">
                                             </div>
                                         </div>
