--- a/src/main/resources/public/payloan.html
+++ b/src/main/resources/public/payloan.html
@@ -56,7 +56,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="amount">Amount</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" id="amount" placeholder="ex. 1000">
+                                <input type="number" step="0.01"  class="form-control" id="amount" placeholder="ex. 1000">
                             </div>
                         </div>
 
