--- a/src/main/resources/public/transferfunds.html
+++ b/src/main/resources/public/transferfunds.html
@@ -57,14 +57,14 @@
                                         <option value="-1">Enter account number</option>
                                     </optgroup>
                                 </select>
-                                <input style="margin-top: 15px;" type="number" class="form-control" id="acc_number" placeholder="4-digit account number">
+                                <input style="margin-top: 15px;" type="number" step="0.01"  class="form-control" id="acc_number" placeholder="4-digit account number">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="amount">Amount:</label>
                             <div class="col-sm-10">
-                                <input type="number" class="form-control" id="amount" placeholder="ex. 1000">
+                                <input type="number" step="0.01"  class="form-control" id="amount" placeholder="ex. 1000">
                             </div>
                         </div>
 
