--- a/src/main/resources/public/profile.html
+++ b/src/main/resources/public/profile.html
@@ -110,7 +110,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-2" for="phone_input">Phone:</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="phone_input" placeholder="ex. 3214560987" required>
+                                <input type="tel" pattern="\d{10}" class="form-control" id="phone_input" placeholder="ex. 3214560987" required>
                             </div>
                         </div>
                         <div class="form-group">
